--- a/templates/test-result.html
+++ b/templates/test-result.html
@@ -11,7 +11,10 @@
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
-            <h1 class="mt-3">ID{{ test.id }} {{ user.text.test_result }}</h1>
+            <div class="d-flex align-items-center gap-2 mt-3">
+              <button type="button" class="btn btn-outline-secondary btn-sm" onclick="goBack()">{{ user.text.back }}</button>
+              <h1 class="m-0">ID{{ test.id }} {{ user.text.test_result }}</h1>
+            </div>
             <hr/>
             <div class="card">
               <div class="card-body">
@@ -41,11 +44,21 @@
         </div>
       </div>
     </div>
+    <form style="display:none" id="back-form" method="post">
+      <input type="hidden" name="user_id" value="{{ test.user_id|default:user.id }}" />
+    </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script type="text/javascript">
-        let webApp = window.Telegram.WebApp;
-        webApp.expand();
-        webApp.BackButton.show();
+        const webApp = window.Telegram && window.Telegram.WebApp;
+        function goBack(){
+          const form = document.getElementById('back-form');
+          form.action = "/bot/themes/{{ test.theme_id }}/";
+          form.submit();
+        }
+        if(webApp){
+          webApp.expand();
+          try{ webApp.BackButton.show(); webApp.BackButton.onClick(goBack);}catch(e){}
+        }
     </script>
   </body>
 </html>
