--- a/templates/themes.html
+++ b/templates/themes.html
@@ -11,14 +11,20 @@
         <div class="col">
             <h1 class="mt-3">{{ user.text.themes }}</h1>
             <hr/>
+            {% if user.is_active %}
             <ul class="list-group list-group-flush">
-            {% for theme in themes %}
-              <li onclick="goToThemeDetail({{ theme.id }})" class="list-group-item d-flex justify-content-between align-items-center">
-                  {{ theme.name }}
-                <small class="text-muted">{{ theme.quizzes_count }}</small>
-              </li>
-            {% endfor %}
+              {% for theme in themes %}
+                <li onclick="goToThemeDetail({{ theme.id }})" class="list-group-item d-flex justify-content-between align-items-center">
+                    {{ theme.name }}
+                  <small class="text-muted">{{ theme.quizzes_count }}</small>
+                </li>
+              {% endfor %}
             </ul>
+            {% else %}
+            <div class="alert alert-warning" role="alert">
+              {{ user.text.your_subscription_is_expired|default:"Sizning obunangiz tugagan." }}
+            </div>
+            {% endif %}
         </div>
       </div>
     </div>
