--- a/templates/theme.html
+++ b/templates/theme.html
@@ -57,11 +57,17 @@
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script type="text/javascript">
-        {% if not user.is_active %}
+        // Show a friendly alert via Telegram WebApp if available, otherwise browser alert
         function youAreNotActive(){
-            alert("{{ user.text.you_are_not_active | safe }}");
+            const msg = "{{ user.text.you_are_not_active | safe }}";
+            try {
+                if (window.Telegram && window.Telegram.WebApp && window.Telegram.WebApp.showAlert){
+                    window.Telegram.WebApp.showAlert(msg);
+                } else {
+                    alert(msg);
+                }
+            } catch (e) { alert(msg); }
         }
-        {% endif %}
 
         function goToNewTest(){
             // Clear any previous saved progress for this user/theme
