--- a/templates/theme.html
+++ b/templates/theme.html
@@ -21,8 +21,8 @@
                 </div>
                 <div class="col-4 text-end">
                     {% if user.is_active %}
-                    <button id="btn-start-new" class="btn btn-primary" type="button" onclick="onStartNewClick()">{{ user.text.start_testing }}</button>
-                    <button id="btn-continue" class="btn btn-secondary ms-1" type="button" onclick="onContinueClick()" style="display:none">{{ user.text.continue_label|default:'Davom etish' }}</button>
+                    <button id="btn-start-new" class="btn btn-primary" type="submit" form="form" formaction="/bot/test/" formmethod="post" onclick="onStartNewClick()">{{ user.text.start_testing }}</button>
+                    <button id="btn-continue" class="btn btn-secondary ms-1" type="submit" form="form" formaction="/bot/test/" formmethod="post" onclick="onContinueClick()" style="display:none">{{ user.text.continue_label|default:'Davom etish' }}</button>
                     {% else %}
                         <button class="btn btn-primary" type="button" onclick="youAreNotActive()">{{ user.text.start_testing }}</button>
                     {% endif %}
