--- a/templates/themes.html
+++ b/templates/themes.html
@@ -22,7 +22,7 @@
       <div class="row">
         <div class="col">
           
-              <h1 class="mt-3 page-title title-with-logo">
+              <h1 class="mt-3 page-title title-with-logo d-flex justify-content-between">
                 <span>{{ user.text.themes }}</span>
                 <svg width="152" height="55" viewBox="0 0 152 55" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g clip-path="url(#clip0_81_773)">
