--- a/templates/theme.html
+++ b/templates/theme.html
@@ -126,7 +126,7 @@
             </div>
           </div>
           <div class=" flex-grow-1" style="margin-top:-4px;">
-            <h1 class="page-title text-center m-0">{{ theme.name|strip_num_prefix }}</h1>
+            <h1 class="page-title text-center mt-2 m-0">{{ theme.name|strip_num_prefix }}</h1>
             <div class="text-muted">{{ user.text.total_quizzes_count }} {{ theme.quizzes_count }}</div>
           </div>
 
@@ -135,10 +135,14 @@
               {% with pct_str=test.correct_answers|percent_in_parens %}
               <div class="position-relative p-3 mb-3" style="background:#ede7ff;border-radius:16px;">
                 <div class="d-flex justify-content-between align-items-center">
-                  <div class="d-flex align-items-center gap-2 text-muted" style="font-size:12px;">
+                  <div>
+                     <div class="d-flex align-items-center gap-2 text-muted" style="font-size:12px;">
                     <span style="width:6px;height:6px;background:#9d7cff;border-radius:50%;display:inline-block;"></span>
                     <span>ID{{ test.id }}</span>
                   </div>
+                    <div class="mt-2" style="font-weight:600;">{{ user.text.test_result }}</div>
+                  </div>  
+                 
                   <div class="ring" data-correct="{{ correct_count }}" data-total="{{ theme.quizzes_count }}">
                     <svg width="54" height="54" viewBox="0 0 54 54">
                       <circle class="bg" cx="27" cy="27" r="23" fill="none" stroke-width="6"/>
@@ -149,7 +153,7 @@
               </div>
               {% endwith %}
                 </div>
-                <div class="mt-2" style="font-weight:600;">{{ user.text.test_result }}</div>
+            
                 <div class="mt-2">
                   <div class="bg-white  check-btn px-3 py-2 mb-2">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
